# Kite-edge

./: .env.example  .formatter.exs  .gitignore  README.md  docker-compose.yml  mix.exs  test_standalone.exs
.agent/commands/: speckit.constitution.md  speckit.tasks.md
.agent/rules/: specify-rules.md
.github/workflows/: ci.yml
.specify/templates/: tasks-template.md
Prompt and plan/: KiteEdge_Launch_Prompt.md  KiteEdge_Master_Prompt.md  KiteEdge_Plan.md  TicketFlow_Launch_Prompt.md  TicketFlow_Master_Prompt.md
analytics_engine/: Dockerfile  README.md  __init__.py  pyproject.toml
analytics_engine/api/: __init__.py  main.py
analytics_engine/api/routes/: forecast.py  reports.py  risk.py  signals.py  technical.py  trades.py
analytics_engine/api/services/: cache.py  diversification.py  rebalance.py  signals.py
analytics_engine/forecast/: __init__.py  accuracy.py  arima.py  ensemble.py  portfolio.py  prophet_model.py  signals.py
analytics_engine/portfolio/: __init__.py  xirr.py
analytics_engine/reports/: csv_export.py  disclaimers.py  excel.py  pdf_export.py  tearsheet.py
analytics_engine/risk/: __init__.py  correlation.py  metrics.py  montecarlo.py  stress.py  var.py
analytics_engine/technical/: __init__.py  indicators.py  patterns.py  summary.py  support_resistance.py
analytics_engine/tests/: test_correlation.py  test_forecast_arima.py  test_forecast_prophet.py  test_forecast_signals.py  test_indicators_momentum.py  test_indicators_trend.py  test_indicators_volatility_volume.py  test_portfolio_forecast.py  test_rebalance.py  test_reports_export.py  test_reports_pdf.py  test_reports_tearsheet.py  test_risk_metrics.py  test_stress.py  test_suggestions_signals.py  test_technical_api.py  test_technical_summary.py  test_trade_execution.py  test_trade_performance.py  test_var_historical_parametric.py  test_var_montecarlo.py  test_xirr_holdings.py
analytics_engine/tests/benchmarks/: test_indicator_benchmark.py  test_risk_benchmark.py
analytics_engine/trades/: __init__.py  cost_basis.py  execution.py  performance.py
apps/kite_edge/: mix.exs
apps/kite_edge_web/: mix.exs
apps/market_data/: mix.exs
apps/notification/: mix.exs
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
dashboard/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
dashboard/src/: App.tsx  index.css
data_pipeline/: Dockerfile  pyproject.toml
data_pipeline/consumers/: __init__.py  alert_evaluator.py  forecast_scheduler.py  indicator_updater.py
data_pipeline/tests/: test_alert_evaluator.py
docs/: DEVELOPER_GUIDE.md  USER_GUIDE_COMPLETE.md  api_and_methodology.md  user_guide.md
infra/docker/: gateway.Dockerfile  market_data.Dockerfile  notification.Dockerfile
infra/grafana/: kite_edge_dashboard.json
infra/k6/: load_test.js  rate_limiter_soak.js
infra/kafka/: create-topics.sh
infra/monitoring/: prometheus.yml
infra/nginx/: nginx.conf
specs/kiteedge/: analysis-report.md  constitution.md  plan.md  (+5 more)
(+174 files in other folders)
