[project]
name = "kiteedge-analytics-engine"
version = "0.1.0"
description = "KiteEdge analytics engine: technical, risk, forecast, signals, rebalance, and reports."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Proprietary" }
authors = [{ name = "KiteEdge" }]

dependencies = [
  "fastapi==0.111.0",
  "uvicorn[standard]==0.30.1",
  "pydantic==2.7.4",
  "pydantic-settings==2.3.4",
  "numpy==1.26.4",
  "pandas==2.2.2",
  "scipy==1.13.1",
  "statsmodels==0.14.2",
  "scikit-learn==1.5.0",
  "ta==0.11.0",
  "QuantStats==0.0.81",
  "prophet==1.1.5",
  "redis==5.0.7",
  "httpx==0.27.0",
  "structlog==24.2.0",
  "prometheus-client==0.20.0",
  "orjson==3.10.6",
  "reportlab==4.2.2",
  "openpyxl==3.1.5",
  "python-multipart==0.0.9"
]

[project.optional-dependencies]
dev = [
  "pytest==8.2.2",
  "pytest-asyncio==0.23.7",
  "pytest-cov==5.0.0",
  "hypothesis==6.103.2",
  "ruff==0.5.0",
  "mypy==1.10.1",
  "respx==0.21.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
  "analytics_engine"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --cov=. --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
