[project]
name = "kiteedge-data-pipeline"
version = "0.1.0"
description = "KiteEdge data pipeline: Kafka consumers for candles, indicators, alerts, and forecasts."
requires-python = ">=3.11,<3.13"
readme = "README.md"
license = { text = "Proprietary" }
authors = [{ name = "KiteEdge" }]

dependencies = [
  "confluent-kafka==2.5.0",
  "redis==5.0.7",
  "psycopg[binary,pool]==3.2.1",
  "pandas==2.2.2",
  "numpy==1.26.4",
  "ta==0.11.0",
  "pydantic==2.7.4",
  "pydantic-settings==2.3.4",
  "structlog==24.2.0",
  "prometheus-client==0.20.0",
  "tenacity==8.4.2",
  "orjson==3.10.6",
  "apscheduler==3.10.4"
]

[project.optional-dependencies]
dev = [
  "pytest==8.2.2",
  "pytest-asyncio==0.23.7",
  "pytest-cov==5.0.0",
  "ruff==0.5.0",
  "mypy==1.10.1"
]

[project.scripts]
kiteedge-candle-builder = "consumers.candle_builder:main"
kiteedge-indicator-updater = "consumers.indicator_updater:main"
kiteedge-alert-evaluator = "consumers.alert_evaluator:main"
kiteedge-forecast-scheduler = "consumers.forecast_scheduler:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["consumers", "common"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]
